# mage-hands

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  lessons.md
common/: pyproject.toml
common/mage_hands_core/: __init__.py  audit.py  auth.py  config.py  exec.py  policy.py  server.py
common/tests/: test_audit.py  test_read_policy.py  test_relay_core.py  test_ssh_runner.py
docs/: deploy.md  getting-started.md  maintenance.md
net-monitor/: .gitignore  Dockerfile  README.md  compose.yaml  monitor.sh  summary.sh
router-hands/: .env.example  Dockerfile  README.md  compose.yaml  serve.json  server.py
router-hands/scripts/: idle-watchdog.sh  install-sudo.sh  relay-down.sh  relay-up.sh  smoke-test.py
router-hands/tests/: conftest.py  test_parsers.py
router-monitor/: .gitignore  Dockerfile  README.md  compose.yaml  monitor.sh  summary.sh
synology-hands/: .env.example  Dockerfile  README.md  compose.yaml  firewall.py  server.py
synology-hands/scripts/: idle-watchdog.sh  install-sudo.sh  plex-update.sh  relay-down.sh  relay-up.sh  smoke-test.py  tailscale-update.sh  ups-healthcheck.sh  watchtower-update.sh
synology-hands/tests/: test_firewall.py
