[project]
name = "mage-hands-core"
version = "0.1.0"
description = "Reusable MCP relay core for mage-hands appliance agents (NAS, router, ...)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3,<4",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mage_hands_core"]
